--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="join_our_community">Join our community</string>
+    <string name="sign_in_now">Sign in now</string>
+    <string name="email">E-mail</string>
+    <string name="already_have_account">Already have account?</string>
+    <string name="log_in">Log in</string>
+    <string name="forgot_your_password_click_here">Forgot your password? Click here</string>
 </resources>
