--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Project_CS426_RunningApp</string>
     <string name="home">Home</string>
-    <string name="achievements">Achievements</string>
+    <string name="music">Music</string>
     <string name="dontknow">DontKnow</string>
     <string name="profile">Profile</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
